--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                             KILLMONGER
                         <p class="personnage_text">La sauvagérie de N'Jadaka alors qu'il servait dans une unité d'opérations noires
                             de l'armée américaine lui a valu le surnom de Killmonger. D'origine Wakandaise,
-                            et se sentant abandoné par sa nation, il cherche à détroner T'Challa dans une quête vers le pouvoir.
+                            et se sentant abandoné par sa nation, il cherche à détroner T'Challa dans une quête vers le pouvoir.<br>
+                            <a href="">Voir plus ></a>
                         </p>
                     </div>
                     <img class="fit_image" src="./public/Assets/Accueil/Pantherhome3.png" alt="">
@@ -58,7 +59,8 @@
                         <h2>OKOYE</h2>
                         <p class="personnage_text">
                             Okoy est le général des Dora Milaje (groupe d'élite de femmes guerrières) et le chef 
-                            des forces armées et des renseignements wakandais. Témoin du courronnement de T'challa, elle se joint à lui dans de nombreuse aventures
+                            des forces armées et des renseignements wakandais. Témoin du courronnement de T'challa, elle se joint à lui dans de nombreuse aventures. <br>
+                            <a href="">Voir plus ></a>
                         </p>
                     </div>
                         <img class="fit_image" src="./public/Assets/Accueil/Pantherhome4.png" alt="">
@@ -171,7 +173,7 @@
             <div class="displayForm">
                 <form class="formLogin" action="">
                     <p>Besoin de l'intervention du Wakanda ?</p>
-                    <h3>Contacter nous</h3>
+                    <h3>Contactez nous</h3>
                     <input class="input" type="text" placeholder="Nom" required >
                     <input class="input" type="email" name="" id="" placeholder="Email">
                     <textarea name="" id="" cols="30" rows="10">Message</textarea>
@@ -181,18 +183,31 @@
         </section>
     </main>
     <footer>
-        <div class="marvel_side">
-            <div circle class="first_circle"></div>
-            <div class="second_circle">
-                <img src="./public/Assets/All pages/icon_SAYNA.png" alt="">
-                <img src="./public/Assets/All pages/icon_x.png" alt="">
-                <img src="./public/Assets/All pages/icon_MARVEL.png" alt="">
-            </div>
-            <div circle class="third_circle"></div>
+        <div class="footer">
+            <div class="marvel_side">
+                <img src="./public/Assets/All pages/footer1.png" alt="">
+                <img class="sayna_footer" src="./public/Assets/All pages/footer2.png" alt="">
         </div>
         <div class="social_side">
-            
+            <div class="wakanda_page">
+                <h2>Pages</h2>
+                <p>A propos</p>
+                <p>Wakanda</p>
+            </div>
+            <div class="social_icons">
+                <h2>Retrouvez nous</h2>
+                <div class="icon_container">
+                    <img src="./public/Assets/All pages/footer3.png" alt="">
+                    <img src="./public/Assets/All pages/footer4.png" alt="">
+                    <img src="./public/Assets/All pages/footer5.png" alt="">
+                    <img src="./public/Assets/All pages/footer6.png" alt="">
+                </div>
+            </div>
         </div>
+        </div>
+            <div class="policy">
+                <p >2022 tous drois réservés <span class="span"> </span>Politique de confidentialité<span class="span"> </span>Condition d'utilisation</p>
+            </div>
     </footer>
 </body>
 </html>
