--- a/index.html
+++ b/index.html
@@ -11,19 +11,31 @@
     <header>
         <nav>
             <div class="header_icons">
-                <img src="./public/Assets/All pages/icon_SAYNA.png" alt="">
-                <img src="./public/Assets/All pages/icon_x.png" alt="">
-                <img src="./public/Assets/All pages/icon_MARVEL.png" alt="">
+                <img src="./public/Assets/All/icon_SAYNA.png" alt="">
+                <img src="./public/Assets/All/icon_x.png" alt="">
+                <img src="./public/Assets/All/icon_MARVEL.png" alt="">
             </div>
             <ul>
                 <li><a href="">Accueil</a></li>
-                <li><a href="">Wakanda</a></li>
-                <li><a href="">Enigme</a></li>
+                <li><a href="./pages/wakanda.html">Wakanda</a></li>
+                <li><a href="./pages/enigme.html">Enigme</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="panther_section">
+            <div class="barre">
+                <div class="vertical_full"></div>
+                <div class="vertical_min">
+                    <div class="barre_min"></div>
+                    <div class="social_media">
+                        <img src="./public/Assets/All/icon_facebook.png" alt="">
+                        <img src="./public/Assets/All/icon_instagram.png" alt="">
+                        <img src="./public/Assets/All/icon_twitter.png" alt="">
+                        <img src="./public/Assets/All/icon_tiktok.png" alt="">
+                    </div>
+                </div>
+            </div>
             <!-- Section des propos de black panther et des personnages -->
             <div class="black_panther">
                 <h1>Black Panther</h1>
@@ -185,22 +197,22 @@
     <footer>
         <div class="footer">
             <div class="marvel_side">
-                <img src="./public/Assets/All pages/footer1.png" alt="">
-                <img class="sayna_footer" src="./public/Assets/All pages/footer2.png" alt="">
+                <img src="./public/Assets/All/footer1.png" alt="">
+                <img class="sayna_footer" src="./public/Assets/All/footer2.png" alt="">
         </div>
         <div class="social_side">
             <div class="wakanda_page">
                 <h2>Pages</h2>
-                <p>A propos</p>
-                <p>Wakanda</p>
+                <p style="color:white; font-family: 'cantarell';">A propos</p>
+                <p style="color:white; font-family: 'cantarell';">Wakanda</p>
             </div>
             <div class="social_icons">
                 <h2>Retrouvez nous</h2>
                 <div class="icon_container">
-                    <img src="./public/Assets/All pages/footer3.png" alt="">
-                    <img src="./public/Assets/All pages/footer4.png" alt="">
-                    <img src="./public/Assets/All pages/footer5.png" alt="">
-                    <img src="./public/Assets/All pages/footer6.png" alt="">
+                    <img src="./public/Assets/All/footer3.png" alt="">
+                    <img src="./public/Assets/All/footer4.png" alt="">
+                    <img src="./public/Assets/All/footer5.png" alt="">
+                    <img src="./public/Assets/All/footer6.png" alt="">
                 </div>
             </div>
         </div>
