Finition de la partie statique

--- a/pages/enigme.html
+++ b/pages/enigme.html
@@ -37,9 +37,32 @@
             </div>
         </section>
         <section class="crypted_text">
-            <h2></h2>
-            <div class="container">
-
+            <h2 class="crypted_title">"SI JE SUIS  FIDELE C'EST A CE TRONE 
+                PEU IMPORTE QUI MONTE DESSUS"</h2>
+            <div class="display_div">
+                <div class="crypted_first_div">
+                    <p>Voici la transcription de l'alphabet</p>
+                    <p class="alphabet">
+                        A = A  ; B = b ; c = c  ; d = d  ; e = e  ; f = f ; g = g  ; h = h ; i = i  ; j = j  ; 
+                        k = k ; l = l  ; m = m  ; n = n  ; o = o  ; p = p  ; q = q  ; r = r  ; s = s  ; t = t  ;
+                        u = u  ; w = w  ; x = x  ; y = y  ; z = z   
+                    </p>
+                    <form action="" class="response_form">
+                        <label for="reponse">Alors, as-tu la réponse ?</label>
+                        <input id="reponse" name="reponse" type="text" placeholder="Réponse">
+                        <input class="btn" type="submit" value="Envoyer">
+                    </form>
+                </div>
+                <div class="after_crypted_text">
+                    <div class="last_parag">
+                        <p>Le savais tu ? </p>
+                    <p>
+                        Plusieurs sources s’entendent pour dire que la lettre la plus utilisée en français   est 
+                        la lettre E. En pourcentage de fréquence, la lettre est utilisée  à 14% dans une 
+                        phrase. Et si tu regardais quel symbole revient le plus souvent ? </p>
+                    </div>
+                    <img src="../public/Assets/Enigme/Pantherenigme2.png" alt="">
+                </div>
             </div>
         </section>
     </main>
