Correction des erreurs

--- a/pages/enigme.html
+++ b/pages/enigme.html
@@ -33,6 +33,9 @@
                         Prouve tont talent et déchiffre cette réplique d'Okoye écrite en wakandais et apprend par la même occasion la première valeur d'une Dora Milaje !
                     </p>
                     <img src="../public/Assets/Enigme/Pantherenigme2.png" alt="">
+                    <div class="image">
+                        <img class="ligne" src="../public/Assets/Enigme/Pantherenigme3.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
