--- a/pages/enigme.html
+++ b/pages/enigme.html
@@ -46,9 +46,15 @@
                 <div class="crypted_first_div">
                     <p>Voici la transcription de l'alphabet</p>
                     <p class="alphabet">
-                        A = A  ; B = b ; c = c  ; d = d  ; e = e  ; f = f ; g = g  ; h = h ; i = i  ; j = j  ; 
-                        k = k ; l = l  ; m = m  ; n = n  ; o = o  ; p = p  ; q = q  ; r = r  ; s = s  ; t = t  ;
-                        u = u  ; w = w  ; x = x  ; y = y  ; z = z   
+                        A =<span class="wakanda_transform">A </span>  ; B =<span class="wakanda_transform">B</span> ; C = <span class="wakanda_transform">C</span>;
+                        D =<span class="wakanda_transform">D </span>; E = <span class="wakanda_transform">E</span>  ; F = <span class="wakanda_transform">F </span>;
+                        G = <span class="wakanda_transform">G </span>  ; H = <span class="wakanda_transform">H</span> ; I = <span class="wakanda_transform">I</span> ; 
+                        J = <span class="wakanda_transform">J</span> ; 
+                        K = <span class="wakanda_transform">K</span> ; L= <span class="wakanda_transform">L</span> ; M = <span class="wakanda_transform">E</span> ; N = <span class="wakanda_transform">N</span> ; 
+                        O = <span class="wakanda_transform">O</span>  ; P = <span class="wakanda_transform">P</span> ; Q = <span class="wakanda_transform">Q</span>  
+                        ; R = <span class="wakanda_transform">R</span>  ; S = <span class="wakanda_transform">S</span>  ; T = <span class="wakanda_transform">T</span>  ;
+                        U = <span class="wakanda_transform">U</span>  ; W = <span class="wakanda_transform">W</span>  ; X = <span class="wakanda_transform">X</span>  
+                        ; Y = <span class="wakanda_transform">Y</span>  ; Z = <span class="wakanda_transform">Z</span>   
                     </p>
                     <form action="" class="response_form">
                         <label for="reponse">Alors, as-tu la réponse ?</label>
